--- a/client/src/SignupForm.css
+++ b/client/src/SignupForm.css
@@ -1,5 +1,182 @@
 .signup-container {
   display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+}
+
+.signup-form {
+  display: flex;
+  flex-direction: column;
+  width: 350px;
+  padding: 30px;
+  background-color: #f7f7f7;
+  border-radius: 10px;
+  box-shadow: 0 3px 6px rgba(0, 0, 0, 0.1);
+}
+
+.signup-heading {
+  margin-bottom: 20px;
+  font-size: 24px;
+  font-weight: bold;
+  text-align: center;
+  color: #333;
+}
+
+.signup-input {
+  margin-bottom: 15px;
+  padding: 10px;
+  border: none;
+  border-radius: 5px;
+  font-size: 16px;
+  background-color: #eee;
+  color: #333;
+}
+
+.signup-input:focus {
+  outline: none;
+  box-shadow: 0 0 5px #2196f3;
+}
+
+.signup-button {
+  margin-top: 15px;
+  padding: 10px;
+  border: none;
+  border-radius: 5px;
+  font-size: 16px;
+  font-weight: bold;
+  color: #fff;
+  background-color: #2196f3;
+  cursor: pointer;
+}
+
+.signup-button:hover {
+  background-color: #0d8edf;
+}
+
+.signup-error {
+  margin-top: 10px;
+  color: red;
+  font-size: 14px;
+}
+
+.image-field {
+  margin-top: 15px;
+}
+
+label {
+  font-size: 16px;
+  font-weight: bold;
+  color: #333;
+  margin-bottom: 5px;
+}
+
+select {
+  margin-bottom: 15px;
+  padding: 10px;
+  border: none;
+  border-radius: 5px;
+  font-size: 16px;
+  background-color: #eee;
+  color: #333;
+  appearance: none;
+}
+
+select:focus {
+  outline: none;
+  box-shadow: 0 0 5px #2196f3;
+}
+
+.react-datepicker {
+  font-size: 16px;
+}
+
+.react-datepicker__header {
+  background-color: #2196f3;
+  color: #fff;
+  border-radius: 5px 5px 0 0;
+  padding-top: 10px;
+}
+
+.react-datepicker__current-month,
+.react-datepicker-time__header {
+  font-weight: bold;
+  margin-top: 5px;
+  margin-bottom: 10px;
+}
+
+.react-datepicker__day-name,
+.react-datepicker__day {
+  width: 2.5em;
+  line-height: 2.5em;
+  margin: 0.25em;
+  border-radius: 50%;
+}
+
+.react-datepicker__day:hover {
+  background-color: #f0f0f0;
+  color: #333;
+}
+
+.react-datepicker__day--selected {
+  background-color: #2196f3;
+  color: #fff;
+  font-weight: bold;
+}
+
+.react-datepicker__day--selected:hover {
+  background-color: #0d8edf;
+}
+
+.react-datepicker__day--keyboard-selected {
+  background-color: #0d8edf;
+}
+
+.react-datepicker__day--today {
+  font-weight: bold;
+}
+
+.react-datepicker__day--today:hover {
+  background-color: #f0f0f0;
+}
+
+.react-datepicker__time-list-item {
+  padding: 0.5em;
+  white-space: nowrap;
+  }
+  
+  .react-datepicker__time-list-item:hover {
+  background-color: #f0f0f0;
+  }
+  
+  .react-datepicker__time-list-item--selected {
+  background-color: #2196f3;
+  color: #fff;
+  font-weight: bold;
+  }
+  
+  .react-datepicker__time-list-item--selected:hover {
+  background-color: #0d8edf;
+  }
+  
+  @media only screen and (max-width: 600px) {
+  .signup-form {
+  width: 80%;
+  }
+  }
+
+  .dob {
+    display: flex;
+    justify-content: center;
+    padding: 10px;
+  }
+
+  .dob-label{
+    /* padding-left: 10px; */
+    margin-right: 10px;
+  }
+/* .signup-container {
+  display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
@@ -74,4 +251,4 @@
 .signup-error {
   color: red;
   margin-top: 1rem;
-}
+} */
