--- a/client/src/ChatScreen.css
+++ b/client/src/ChatScreen.css
@@ -1,7 +1,8 @@
 .chatScreen__message{
     display: flex;
     align-items: center;
-    padding: 20px
+    padding: 15px;
+    /* padding-bottom: 30px; */
 }
 
 .chatScreen__text{
@@ -26,7 +27,10 @@
     color: white;
 }
 
-/* margin-left: auto; will; push something the farthest direction it can */
+.chatScreen--chatContainer{
+    padding-bottom: 20px;
+}
+
 
 .chatScreen__input{
     display: flex;
@@ -50,5 +54,12 @@
     font-weight: bolder;
     color: #fe3d71;
 }
+
+.chatScreen {
+    height: calc(100vh - 100px); /* Adjust the value to fit your layout */
+    overflow-y: scroll;
+  }
+
+
 /* position: fixed;
 bottom: 0; this fixes our input field to the botton of the screen */
