--- a/client/src/ProfilePage.css
+++ b/client/src/ProfilePage.css
@@ -1,5 +1,5 @@
 
-.userProfile {
+.profilePage {
     background-color: #fff;
     border-radius: 20px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.16);
@@ -12,27 +12,22 @@
     position: relative;
     text-align: center;
     width: 90%;
-    max-width: 600px; /* Adjust the value to your desired width */
-    height: 600px; /* Set a fixed height to accommodate the larger image size */
+    max-width: 600px; 
+    height: 600px; 
     margin-top: 1.5vh;
     margin-bottom: 1.5vh;
     cursor: pointer;
     transition: box-shadow 0.3s ease;
   }
   
-  .userProfile:hover {
-    box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
-  }
-  
-  
-  .userProfile__image-container {
+  .profilePage__image-container {
     position: relative;
     width: 400px; 
     height: 500px; 
     padding-bottom: 75%; 
   }
   
-  .userProfile__image {
+  .profilePage__image {
     position: absolute;
     top: 50%;
     left: 50%;
@@ -56,7 +51,7 @@
     border-radius: 5px;
   } */
   
-  .userProfile__h1 {
+  .profilePagee__h1 {
     position: absolute;
     bottom: 30px;
     left: 40px;
@@ -68,7 +63,7 @@
     border-radius: 10px;
   }
   
-  .userProfile p {
+  .profilePage p {
     font-size: 18px;
     margin-bottom: 20px; 
     padding: 20px;
@@ -77,90 +72,5 @@
     box-shadow: 0 4px 8px rgba(61, 60, 60, 0.16);
   }
   
-  .edit-icon-container {
-    position: absolute;
-    bottom: 10px;
-    right: 1px;
-  }
   
-  .edit-icon {
-    font-size: 50px;
-    color: #555;
-  } 
-  
-  
-  
-  
-  
-  
-  
-  
-  
-  /* .userProfile {
-    background-color: #fff;
-    border-radius: 20px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.16);
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    margin: 0 auto;
-    padding: 30px;
-    position: relative;
-    text-align: center;
-    width: 90%;
-    max-width: 600px; 
-    height: 600px; 
-    margin-top: 1.5vh;
-    margin-bottom: 1.5vh;
-  }
-  
-  .userProfile img {
-    border-radius: 20px;
-    height: 600px; 
-    width: 400px; 
-    object-fit: contain; 
-    margin-bottom: 20px; 
-  }
-  
-  @media (max-width: 768px) {
-    .userProfile img {
-      height: 350px;
-      width: 100%;
-    }
-  }
-  
-  .image-h1-container{
-    position: relative;
-    text-align: center;
-    margin: -70px;
-  }
-  
-  .userProfile h1 {
-    position: absolute;
-    bottom: 130px;
-    left: 16px;
-    color: rgb(248, 11, 11);
-  }
-  
-  
-  .userProfile p {
-    font-size: 18px;
-    margin-bottom: 20px; 
-    padding: 20px;
-    background-color: rgba(255, 255, 255, 0.9);
-    border-radius: 20px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.16);
-  }
-  
-  .edit-icon-container {
-    position: absolute;
-    bottom: 10px;
-    right: 1px;
-  }
-  
-  .edit-icon {
-    font-size: 50px;
-    color: #555;
-  } */
   
