--- a/client/src/SwipeButtons.css
+++ b/client/src/SwipeButtons.css
@@ -1,39 +1,30 @@
-.swipeButtons{
+.swipeButtons {
     position: fixed;
-    bottom: 10vh;
+    bottom: 2vh;
     width: 100%;
     display: flex;
     justify-content: space-evenly;
-}
-
-.swipeButtons .MuiIconButton-root{
+ 
+  }
+  
+  .swipeButtons button {
+    border: none;
     background-color: white;
-    box-shadow: 0px 10px 53px 0px rgba(0, 0, 0, 0.3) !important;
-}
+    box-shadow: 0px 10px 7px 0px rgba(0, 0, 0, 0.3) !important;
+    border-radius: 50%; /* Add this property to make the buttons circular */
+    padding: 11px; /* Adjust the padding as desired */
 
-.swipeButtons__repeat{
-    padding: 3vw !important;
-    color: #f5b748 !important;
-}
-
-.swipeButtons__left {
-    padding: 3vw !important;
+  }
+  
+  .swipeButtons__left {
     color: #ec5e6f !important;
-}
-
-.swipeButtons__star {
-    padding: 3vw !important;
-    color: #62b4f9 !important;
-}
-
-.swipeButtons__right {
-    padding: 3vw !important;
+    cursor: pointer;
+  }
+  
+ .swipeButtons__right {
     color: #76e2b3 !important;
-}
+    cursor: pointer;
+  } 
 
-.swipeButtons__lightening {
-    padding: 3vw !important;
-    color: #915dd1 !important;
-}
-/* MuiIconButton-root is a special class the Mui gives their buttons  */
-/* padding: 3vw says depending on the size of the screen only use 3 percent of screen */
+
+  
