--- a/client/src/UserProfile.css
+++ b/client/src/UserProfile.css
@@ -32,15 +32,27 @@
   padding-bottom: 75%; 
 }
 
-.userProfile__image {
+/* .userProfile__image {
   position: absolute;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  width: 460px; /* Adjust the width to your desired value */
-  height: 460px; /* Adjust the height to your desired value */
+  width: 460px; 
+  height: 460px; 
   object-fit: contain;
   border-radius: 20px;
+} */
+
+
+.userProfile__image {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 340px;
+    height: 435px;
+    object-fit: cover;
+    border-radius: 20px;
 }
 
 
@@ -58,8 +70,8 @@
 
 .userProfile__h1 {
   position: absolute;
-  bottom: 30px;
-  left: 40px;
+  bottom: 50px;
+  left: 10%;
   margin: 0;
   font-size: 24px;
   color: #fff;
