--- a/client/src/ChatScreen.css
+++ b/client/src/ChatScreen.css
@@ -52,7 +52,7 @@
     margin-right: 20px;
     background-color: white;
     font-weight: bolder;
-    color: #fe3d71;
+    color: #0071BC;
 }
 
 .chatScreen {
