--- a/client/src/ProfilePage.css
+++ b/client/src/ProfilePage.css
@@ -12,7 +12,7 @@
     position: relative;
     text-align: center;
     width: 90%;
-    max-width: 600px; 
+    max-width: 400px; 
     height: 600px; 
     margin-top: 1.5vh;
     margin-bottom: 1.5vh;
@@ -27,14 +27,25 @@
     padding-bottom: 75%; 
   }
   
+  /* .profilePage__image {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    width: 460px; 
+    height: 460px; 
+    object-fit: contain;
+    border-radius: 20px;
+  }
+   */
   .profilePage__image {
     position: absolute;
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    width: 460px; /* Adjust the width to your desired value */
-    height: 460px; /* Adjust the height to your desired value */
-    object-fit: contain;
+    width: 340px;
+    height: 435px;
+    object-fit: cover;
     border-radius: 20px;
   }
   
