--- a/client/src/UserProfile.css
+++ b/client/src/UserProfile.css
@@ -21,7 +21,7 @@
 }
 
 .userProfile:hover {
-  box-shadow: 10px 100px 100px black;
+  box-shadow: 10px 100px 100px rgb(202, 198, 198);
 }
 
 
@@ -31,17 +31,6 @@
   height: 500px; 
   padding-bottom: 75%; 
 }
-
-/* .userProfile__image {
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  width: 460px; 
-  height: 460px; 
-  object-fit: contain;
-  border-radius: 20px;
-} */
 
 
 .userProfile__image {
@@ -86,7 +75,7 @@
   padding: 20px;
   background-color: rgba(255, 255, 255, 0.9);
   border-radius: 20px;
-  box-shadow: 0 4px 8px rgba(61, 60, 60, 0.16);
+  box-shadow: 0 4px 8px rgba(92, 90, 90, 0.16);
 }
 
 .edit-icon-container {
