--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,6 +3,11 @@
 }
 
 
+h1 {
+  /* font-family: 'Montserrat', sans-serif; */
+  /* font-family: 'Roboto Condensed', sans-serif; */
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
