--- a/client/src/index.css
+++ b/client/src/index.css
@@ -5,7 +5,10 @@
 
 h1 {
   /* font-family: 'Montserrat', sans-serif; */
-  /* font-family: 'Roboto Condensed', sans-serif; */
+  /* font-family: 'Proxima Nova'; */
+  /* font-family: Arial, Helvetica, sans-serif */
+  /* font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif */
+  
 }
 
 body {
