css chatscreen, and hover bug resolved

--- a/client/src/ChatBox.css
+++ b/client/src/ChatBox.css
@@ -5,15 +5,18 @@
     padding: 20px;
     height: 70px;
     border-bottom: 1px solid #fafafa;
-    background-color: #ffffff
+
 }
+
+.chat-read:hover {
+    box-shadow: 5px 5px 5px rgb(247, 246, 246);
+  }
 
 .chat-read::after {
     content: "";
     display: block;
     width: 8px;
     height: 8px;
-    /* background-color: #0071bc; */
     border-radius: 50%;
     margin-right: -10px;
     margin-left: 10px;
@@ -26,12 +29,20 @@
     justify-content: space-between;
     padding: 20px;
     height: 70px;
-    border-bottom: 1px solid #fafafa;
-    border: 1.7px solid #efedea;
-    /* border: 1.5px solid #dfddda; */
+    /* border-bottom: 1px solid #fafafa; */
+    /* border-bottom: 1px solid #fafafa; */
+    border: 1.3px solid #f9f8f6;
+
+
+  }
+
+  
+  .chat-unread:hover {
+    box-shadow: 5px 5px 5px rgb(247, 246, 246);
   }
 
 
+  
   .chat-unread::after {
     content: "";
     display: block;
@@ -39,13 +50,15 @@
     height: 8px;
     background-color: #0071bc;
     border-radius: 50%;
-    /* margin-right: -10px; */
     margin-left: 10px;
-  }
+  } 
 
   .chat-unread > p {
-    color: black;
+    color: rgb(117, 116, 116);
+    font-weight: 550;
+    /* font-weight: bold; */
   }
+  
 .chat__details{
     flex: 1;
 }
@@ -60,9 +73,6 @@ a {
     color:  rgb(78, 77, 77);
 }
 
-/* .chat__details > h2 {
-
-} */
 
 .chat__image{
     margin-right: 20px
