--- a/client/src/ChatScreen.css
+++ b/client/src/ChatScreen.css
@@ -43,7 +43,7 @@
 
 .chatScreen__inputField {
     flex: 1;
-    padding: 10px;
+    padding: 15px;
     border: none;
 }
 
@@ -61,8 +61,8 @@
   }
 
   .chat__image__link {
-    height: 200px;
-    width: 200px;
+    height: 55px !important;
+    width: 55px !important;
     cursor: pointer;
   }
 
@@ -71,16 +71,13 @@
     justify-content: center;
     align-items: center;
     margin-right: 10px;
-    
   }
   
  .chat__image__link:hover{
-    box-shadow: 0 100px 100px black;
+    box-shadow: 5px 10px 10px rgb(222, 221, 221);
  }
 
  .chat__image__msg{
-    /* height: 40px;
-    width: 40px; */
     cursor: pointer;
  }
 
