--- a/client/src/DisplayCard.css
+++ b/client/src/DisplayCard.css
@@ -71,13 +71,14 @@
     height: 435px;
     object-fit: cover;
     border-radius: 20px;
+    padding-bottom: 12px;
     
   }
   
   .tinder--card .dislpayCard__h1 {
     position: absolute;
-    bottom: 20px;
-    left: 24%;
+    bottom: 25px;
+    left: 20%;
     transform: translateX(-50%);
     margin: 0;
     font-size: 24px;
