--- a/client/src/index.css
+++ b/client/src/index.css
@@ -3,13 +3,13 @@
 }
 
 
-h1 {
+/* h1 { */
   /* font-family: 'Montserrat', sans-serif; */
   /* font-family: 'Proxima Nova'; */
   /* font-family: Arial, Helvetica, sans-serif */
   /* font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif */
   
-}
+/* } */
 
 body {
   margin: 0;
